# PaddleOCR

./: .env.example  .gitignore  README.md  pyproject.toml
configs/rec/PP-OCRv3/: slplates_finetuning.yml
ppocr/utils/: ppocr.pbtxt  triton_flavor.py
ppocr/utils/dict/: german_slplates.txt
ppocr/utils/loggers/: __init__.py  mlflow_logger.py
tools/: program.py
