[tool.poetry]
name = "paddleocr"
version = "0.0.1"
description = "Fork of PaddleOCR adapted for recognizing characters on German license plates."
authors = ["PaddlePaddle <Paddle-better@baidu.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/optocycle/PaddleOCR.git"
homepage = "https://github.com/optocycle/PaddleOCR"

packages = [
    { include = "ppocr", from = "." },
    { include = "tools", from = "." },
    { include = "paddleocr", from = "." },
]

exclude = [
  "**/.github/*",
  "**/applications/*",
  "**/benchmark/*",
  "**/configs/*",
  "**/deploy/*",
  "**/doc/*",
  "**/docs/*",
  "**/overrides/*",
  "**/ppstructure/docs/*",
  "**/test_tipc/*",
  "**/tests/*",
  ".clang_format.hook",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".style.yapf",
  "mkdocs.yml",
  "train.sh"
]

[tool.poetry.dependencies]
python = ">=3.12, <3.13" 
bce-python-sdk = ">=0.9.35"
paddlepaddle-gpu = { url = "https://paddle-whl.bj.bcebos.com/stable/cu118/paddlepaddle-gpu/paddlepaddle_gpu-3.0.0rc1-cp312-cp312-linux_x86_64.whl" }
shapely = "*"
scikit-image = "*"
pyclipper = "*"
lmdb = "*"
tqdm = "*"
numpy = "*"
rapidfuzz = "*"
opencv-python = "*"
opencv-contrib-python = "*"
cython = "*"
pillow = "^11.3.0"
pyyaml = "*"
python-docx = "*"
beautifulsoup4 = "*"
fonttools = ">=4.24.0"
fire = ">=0.3.0"
requests = "*"
albumentations = "*"
albucore = "*"
setuptools = "^78.0.2"
mlflow = "^2.21.0"
python-dotenv = "^1.1.0"
paddle2onnx = "^2.0.0"
psutil = "^7.0.0"
paddlex = "^3.2.1"

[tool.poetry.scripts]
paddleocr = "paddleocr:main"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.10"
black = "25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

